add health controller, update swagger and dockerfile
